:truck: Rename and format files

--- a/test/Makefile
+++ b/test/Makefile
@@ -5,13 +5,13 @@ CFLAGS = -Wall -Wpedantic -Wextra \
 TEST = -Og -g
 PROD = -O3
 
-DEPS = dynarray_t.o
+DEPS = gen_t.o
 TESTS = unittest.c test.c
 
 test: test.out
 .PHONY: test
 
-dynarray_t.o: dynarray_t.c dynarray_t.h ../dynarray.h
+gen_t.o: gen_t.c gen_t.h ../*.h
 	$(CC) $(CFLAGS) $(TEST) -c $< -o $@
 
 test.o: test.c $(TESTS)
